import "client.comm.proto";
import "client.role_props.proto";
package client;

enum LOTTERY_TYPE_E
{
	GOLD_BOX		= 0;			// 黄金宝箱
	BRONZE_BOX		= 1;			// 青铜宝箱
}

message lottery_item
{
	required uint32 prop_id = 1; 
	optional uint32 gold_box = 2 [default = 0];		// 此字段没用到
	optional uint32 bronze_box = 3 [default = 0];	// 此字段没用到
	optional uint32 num = 4 [default = 1];			// 数量(客户端使用)
}

message lottery_info
{
	required uint32 gold_time				= 1;
	required uint32 bronze_time				= 2;
	required lottery_item gold_lpi			= 3;
}

// 宝箱免费剩余时间
message lottery_time_req
{
	required uint32 role_id = 1;				// 随便填
	optional server_head svr_head = 1000;
}

message lottery_time_rsp
{
	required uint32 gold_time				= 1;	// 黄金宝箱剩余时间(s)
	required uint32 bronze_time				= 2;	// 青铜宝箱剩余时间(s)
}

// 开宝箱
message lottery_open_req
{
	required uint32 times = 1;					// 次数
	required LOTTERY_TYPE_E type = 2;			// 宝箱类型
	required uint32 auto_buy = 3;				// 0 不自动购买 1 自动购买
	optional server_head svr_head = 1000;
}

message lottery_open_rsp
{
	enum ret_e
	{
		SUCCESS = 0;
		PROP_LIMIT = 1;			// 道具不足
		BAG_LIMIT = 2;			// 背包空间不足
		MONEY_LIMIT = 3;		// 铜钱不足
		INGOT_LIMIT = 4;		// 元宝不足
		FAILURE = 5;			// 失败
	}
	required ret_e ret = 1;
	repeated props_info pi = 2;
}
