
package mysql;

message tb_role_lottery{
    required uint32 role_id = 1;
    required uint32 num = 2;
    required uint32 gold_time = 3;
    required uint32 bronze_time = 4;
    required bytes props_list = 5;
}
